0.02 - not yet released
 - Fixed subject reply bug

0.01 - Wed Feb 14 17:05:34 PST 2007
 - stripped noisy headers
 - initial release