@@ -1,5 +1,7 @@
 0.02 - not yet released
  - Fixed subject reply bug
+ - Tagged message with the thread subject
+ - Slight obfuscation of email addresses, like mailman
 
 0.01 - Wed Feb 14 17:05:34 PST 2007
  - stripped noisy headers
